--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@ section {
   padding: 0 2.4rem;
 }
 
+/* Extend Area */
+main .about .container .left a, header .hero-text .btn {
+  display: inline-block;
+  width: 150px;
+  border: 1px solid #c69963;
+  padding: 0.5rem 0rem;
+  color: #fff;
+  text-decoration: none;
+}
+
 header {
   position: relative;
   width: 100%;
@@ -86,12 +96,6 @@ header .hero-text p {
   margin-bottom: 1.5rem;
 }
 header .hero-text .btn {
-  display: inline-block;
-  width: 150px;
-  border: 1px solid #c69963;
-  padding: 0.5rem 0rem;
-  color: #fff;
-  text-decoration: none;
   position: relative;
   overflow: hidden;
   margin: 0 0.5rem 0 0.5rem;
@@ -108,6 +112,78 @@ header .hero-text .btn::before {
 }
 header .hero-text .btn:hover::before {
   left: 100%;
+}
+
+main .about .container {
+  display: flex;
+}
+main .about .container .left {
+  width: 50%;
+}
+main .about .container .left .section-heading h4 {
+  text-transform: uppercase;
+  color: #101d2c;
+  line-height: 0;
+  font-family: "Teko", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+main .about .container .left .section-heading h1 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+  color: #c69963;
+  font-family: "Niconne", cursive;
+  margin: 1rem 0;
+}
+main .about .container .left p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+}
+main .about .container .left a {
+  margin-top: 1rem;
+  color: #c69963;
+  text-align: center;
+  transition: all 0.4s;
+}
+main .about .container .left a:hover {
+  background-color: #c69963;
+  color: #fff;
+}
+main .about .container .right {
+  width: 50%;
+}
+main .about .container .right .img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+main .menu {
+  background-color: #101d2c;
+}
+main .menu .container {
+  display: flex;
+  text-align: center;
+}
+main .menu .container > div {
+  flex: 1;
+}
+main .menu .container .shop-info i {
+  color: #c69963;
+  font-size: 50px;
+}
+main .menu .container .shop-info h1 {
+  font-family: "Teko", sans-serif;
+  font-size: 25px;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #fff;
+  margin: 1rem 0 1.5rem 0;
+}
+main .menu .container .shop-info p {
+  color: rgba(255, 255, 255, 0.5);
 }
 
 /*# sourceMappingURL=style.css.map */
