--- a/sass/index.scss
+++ b/sass/index.scss
@@ -21,6 +21,16 @@ section {
     padding: 0 2.4rem;
 }
 
+/* Extend Area */
+%extend-btn {
+    display: inline-block;
+    width: 150px;
+    border: 1px solid #c69963;
+    padding: .5rem 0rem;
+    color: #fff;
+    text-decoration: none;
+}
+
 header {
     position: relative;
     width: 100%;
@@ -91,12 +101,7 @@ header {
             margin-bottom: 1.5rem;
         }
         .btn {
-            display: inline-block;
-            width: 150px;
-            border: 1px solid #c69963;
-            padding: .5rem 0rem;
-            color: #fff;
-            text-decoration: none;
+            @extend %extend-btn;
             position: relative;
             overflow: hidden;
             margin: 0 .5rem 0 .5rem;
@@ -112,6 +117,88 @@ header {
             }
             &:hover::before {
                 left: 100%;
+            }
+        }
+    }
+}
+
+main {
+    .about {
+        .container {
+            display: flex;
+            .left {
+                width: 50%;
+                .section-heading {
+                    h4 {
+                        text-transform: uppercase;
+                        color: #101d2c;
+                        line-height: 0;
+                        font-family: $Teko;
+                        font-size: 1.5rem;
+                        font-weight: 300;
+                        letter-spacing: 1px;
+                    }
+                    h1 {
+                        font-size: 3.5rem;
+                        font-weight: 300;
+                        line-height: 1.2;
+                        color: #c69963;
+                        font-family: $Niconne;
+                        margin: 1rem 0;
+                    }
+                }
+                p {
+                    font-size: 1rem;
+                    font-weight: 400;
+                    line-height: 1.5;
+                    color: #212529;
+                }
+                a {
+                    @extend %extend-btn;
+                    margin-top: 1rem;
+                    color: #c69963;
+                    text-align: center;
+                    transition: all .4s;
+                    &:hover {
+                        background-color: #c69963;
+                        color: #fff;
+                    }
+                }
+            }
+            .right {
+                width: 50%;
+                .img-fluid {
+                    max-width: 100%;
+                    height: auto;
+                }
+            }
+        } 
+    }
+
+    .menu {
+        background-color: #101d2c;
+        .container {
+            display: flex;
+            text-align: center;
+            > div {
+                flex: 1;
+            }
+            .shop-info {
+                i {
+                    color: #c69963;
+                    font-size: 50px;
+                }
+                h1 {
+                    font-family: "Teko", sans-serif;
+                    font-size: 25px;
+                    font-weight: 300;
+                    text-transform: uppercase;
+                    color: #fff;
+                    margin: 1rem 0 1.5rem 0;
+                }
+                p {
+                    color: rgba(255, 255, 255, 0.5);
+                }
             }
         }
     }
