--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,13 @@ section {
   padding: 0 2.4rem;
 }
 
+.container-fluid {
+  width: 100%;
+  margin: auto;
+}
+
 /* Extend Area */
-main .about .container .left a, header .hero-text .btn {
+main .menu .container-fluid .row .menu-item a, main .about .container .left a, header .hero-text .btn {
   display: inline-block;
   width: 150px;
   border: 1px solid #c69963;
@@ -27,6 +32,25 @@ main .about .container .left a, header .hero-text .btn {
   text-decoration: none;
 }
 
+main .menu .container-fluid .section-heading h4, main .about .container .left .section-heading h4 {
+  text-transform: uppercase;
+  color: #101d2c;
+  line-height: 0;
+  font-family: "Teko", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+main .menu .container-fluid .section-heading h1, main .about .container .left .section-heading h1 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+  color: #c69963;
+  font-family: "Niconne", cursive;
+  margin: 1rem 0;
+}
+
+/* Sass */
 header {
   position: relative;
   width: 100%;
@@ -120,23 +144,6 @@ main .about .container {
 main .about .container .left {
   width: 50%;
 }
-main .about .container .left .section-heading h4 {
-  text-transform: uppercase;
-  color: #101d2c;
-  line-height: 0;
-  font-family: "Teko", sans-serif;
-  font-size: 1.5rem;
-  font-weight: 300;
-  letter-spacing: 1px;
-}
-main .about .container .left .section-heading h1 {
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.2;
-  color: #c69963;
-  font-family: "Niconne", cursive;
-  margin: 1rem 0;
-}
 main .about .container .left p {
   font-size: 1rem;
   font-weight: 400;
@@ -184,6 +191,53 @@ main .menu .container .shop-info h1 {
 }
 main .menu .container .shop-info p {
   color: rgba(255, 255, 255, 0.5);
+}
+main .menu .container-fluid {
+  text-align: center;
+}
+main .menu .container-fluid .section-heading h4 {
+  color: #fff;
+  margin-top: 2rem;
+}
+main .menu .container-fluid .row {
+  display: flex;
+  height: 17rem;
+}
+main .menu .container-fluid .row > div {
+  flex: 1;
+}
+main .menu .container-fluid .row .img-fluid {
+  max-width: 100%;
+  height: 100%;
+}
+main .menu .container-fluid .row .menu-item {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+main .menu .container-fluid .row .menu-item p {
+  display: none;
+}
+main .menu .container-fluid .row .menu-item h6 {
+  color: #c69963;
+  font-size: 20px;
+}
+main .menu .container-fluid .row .menu-item h1 {
+  color: #101d2c;
+  font-size: 30px;
+  letter-spacing: 1px;
+  font-family: "Teko", sans-serif;
+  font-weight: 300;
+}
+main .menu .container-fluid .row .menu-item a {
+  color: #c69963;
+  transition: 0.4s;
+}
+main .menu .container-fluid .row .menu-item a:hover {
+  background-color: #c69963;
+  color: #fff;
 }
 
 /*# sourceMappingURL=style.css.map */
