--- a/sass/index.scss
+++ b/sass/index.scss
@@ -21,6 +21,11 @@ section {
     padding: 0 2.4rem;
 }
 
+.container-fluid {
+    width: 100%;
+    margin: auto;
+}
+
 /* Extend Area */
 %extend-btn {
     display: inline-block;
@@ -31,6 +36,28 @@ section {
     text-decoration: none;
 }
 
+%extend-section-heading {
+    h4 {
+        text-transform: uppercase;
+        color: #101d2c;
+        line-height: 0;
+        font-family: $Teko;
+        font-size: 1.5rem;
+        font-weight: 300;
+        letter-spacing: 1px;
+    }
+    h1 {
+        font-size: 3.5rem;
+        font-weight: 300;
+        line-height: 1.2;
+        color: #c69963;
+        font-family: $Niconne;
+        margin: 1rem 0;
+    }
+}
+
+
+/* Sass */
 header {
     position: relative;
     width: 100%;
@@ -129,23 +156,7 @@ main {
             .left {
                 width: 50%;
                 .section-heading {
-                    h4 {
-                        text-transform: uppercase;
-                        color: #101d2c;
-                        line-height: 0;
-                        font-family: $Teko;
-                        font-size: 1.5rem;
-                        font-weight: 300;
-                        letter-spacing: 1px;
-                    }
-                    h1 {
-                        font-size: 3.5rem;
-                        font-weight: 300;
-                        line-height: 1.2;
-                        color: #c69963;
-                        font-family: $Niconne;
-                        margin: 1rem 0;
-                    }
+                    @extend %extend-section-heading;
                 }
                 p {
                     font-size: 1rem;
@@ -198,6 +209,57 @@ main {
                 }
                 p {
                     color: rgba(255, 255, 255, 0.5);
+                }
+            }
+        }
+        .container-fluid {
+            text-align: center;
+            .section-heading {
+                @extend %extend-section-heading;
+                h4 {
+                    color: #fff;
+                    margin-top: 2rem;
+               }
+            }
+            .row {
+                display: flex;
+                height: 17rem;
+                > div {
+                    flex: 1;
+                }
+                .img-fluid {
+                    max-width: 100%;
+                    height: 100%;
+                }
+                .menu-item {
+                    background-color: #fff;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    p {
+                        display: none;
+                    }
+                    h6 {
+                        color: #c69963;
+                        font-size: 20px;
+                    }
+                    h1 {
+                        color: #101d2c;
+                        font-size: 30px;
+                        letter-spacing: 1px;
+                        font-family: "Teko", sans-serif;
+                        font-weight: 300;
+                    }
+                    a {
+                        @extend %extend-btn;
+                        color: #c69963;
+                        transition: .4s;
+                        &:hover {
+                            background-color: #c69963;
+                            color: #fff;
+                        }
+                    }
                 }
             }
         }
